--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,17 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #121212;
+}
+::-webkit-scrollbar-thumb {
+  background: #494949;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #494949;
+}
